Backed out of supporting Durable store/LMDB